append to test suite and other improvements